--- a/booking.html
+++ b/booking.html
@@ -123,7 +123,7 @@
                     <a href="services.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Our Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Bookings</a>
+                    <a href="#" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Bookings</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">About</a>
