--- a/booking.html
+++ b/booking.html
@@ -50,7 +50,7 @@
 </style>
     </head>
 	<!-- Favicon -->
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="img/favicon (2).ico">
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
