--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <head>
 
         	<!-- Favicon -->
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="img/favicon (2).ico">
         <meta charset="utf-8">
         <title>Services - Compassionate Healthcare</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
