--- a/about.html
+++ b/about.html
@@ -728,8 +728,8 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4" style="font-family:'Ubuntu', sans-serif ; font-size: 16px;"></i>Caring Health Services</h4>
-                            <p>A leading provider of health care staffing services and is registered as a limited liability company in the United States of America</p>
+                            <h4 class="text-white mb-4" style="font-family:'Ubuntu', sans-serif ; font-size: 16px;"></i>Buzzkid Group LTD</h4>
+                            <p>A leading provider of Sports services such as Swimming, Skating, Chess, Ringo, Football, Tennis, and Basketbal services and is registered as a limited liability company in the republic of Kenya</p>
                             </p>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
@@ -744,7 +744,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white" style="font-family:'Ubuntu', sans-serif ; font-size: 16px;">Quick Links</h4>
                             <a href="services.html"><i class="fa fa-user-md me-2"></i> Our Services</a>
-                            <a href="candidate-application-form.html"><i class="fa fa-sticky-note me-2"></i> Apply</a>
+                            <a href="booking.html"><i class="fa fa-sticky-note me-2"></i>booking</a>
                             <a href="about.html"><i class="fa fa-sitemap me-2"></i> About</a>
                         </div>
                     </div>
