--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white" style="font-family:'Ubuntu', sans-serif ; font-size: 16px;">Quick Links</h4>
                             <a href="services.html"><i class="fa fa-user-md me-2"></i> Our Services</a>
-                            <a href="candidate-application-form.html"><i class="fa fa-sticky-note me-2"></i> Bookings</a>
+                            <a href="booking.html"><i class="fa fa-sticky-note me-2"></i> Bookings</a>
                             <a href="about.html"><i class="fa fa-sitemap me-2"></i> About</a>
                         </div>
                     </div>
