--- a/services.html
+++ b/services.html
@@ -125,7 +125,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link" style="font-family: 'Ubuntu', sans-serif;">Home</a>                      
                         <a href="services.html" class="nav-item nav-link active" style="font-family: 'Ubuntu', sans-serif;">Our Services</a>
-                        <a href="candidate-application-form.html" class="nav-item nav-link" style="font-family: 'Ubuntu', sans-serif;">Booking</a>
+                        <a href="booking.html" class="nav-item nav-link" style="font-family: 'Ubuntu', sans-serif;">Booking</a>
                         <a href="about.html" class="nav-item nav-link" style="font-family: 'Ubuntu', sans-serif;">About</a>
                  
                     </div>
