--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         	<!-- Favicon -->
         <link rel="icon" href="img/favicon (2).ico">
         <meta charset="utf-8">
-        <title>BUZZKID GROUP LIMITED</title>
+        <title>About Buzzkid Group Ltd</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
