--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
         	<!-- Favicon -->
         <link rel="icon" href="img/favicon (2).ico">
         <meta charset="utf-8">
-        <title>Services - Compassionate Healthcare</title>
+        <title>Services - Our Focus</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
