Added pool location

--- a/booking.html
+++ b/booking.html
@@ -100,45 +100,170 @@
             </div>
         </div>
         <br>
-
+        <div class="d-flex align-items-center">
+            <a href="index.html" class="navbar-brand p-0">
+              <img class="logo img-fluid" src="img/buzzkidlogo.png" alt="Logo" style="height: 200px;">
+            </a>
+          </div>
+          
+          <div class="container-fluid position-relative p-0">
+              <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                          <span class="fa fa-bars"></span>
+                      </button>
+                  <div class="collapse navbar-collapse" id="navbarCollapse">
+                      <ul class="navbar-nav ms-auto py-0">
+                          <li class="nav-item">
+                              <a href="index.html" class="nav-link active" style="font-family: 'Ubuntu', sans-serif;">Home</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="services.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Our Services</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Bookings</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="about.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">About</a>
+                          </li>
+                      </ul>
+                      <a href="/docs/" target="_blank" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Download Form</a>
+                  </div>
+              </nav>
+          </div>
         <!-- Topbar End -->
+         <!-- Services Start -->
+        <div class="container-fluid service py-5">
+            <div class="container py-5">
+                <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="sub-style">
+                        <h4 class="sub-title px-3 mb-0" style="font-family: 'Ubuntu', sans-serif;">Pool Locations</h4>
+                    </div>
+                    <h1 class="display-3 mb-4" style="font-family: 'Ubuntu', sans-serif;">We offer swimming lessons at the following pools in Nairobi and its surrounding areas</h1>
+                    <p class="mb-0">Discover a wide range of sports serices and solutions that meet your needs</p>
+                </div>
+                <div class="row g-4 justify-content-center">
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/Hillpark.jfif" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">HillPark Hotel Upperhill</h5>
+                                    <p class="mb-4">We provide valuable insight using Data analytics to help you Understand fan preferences and Acquire the right players.</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/DSC_0529.JPG" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">Woodmere Apartments Kilimani</h5>
+                                    <p class="mb-4">We advice sports business leaders on how to profitably crown their business and resolve pressing strategic questions</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/muthu.jfif" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">Heron Portico Kilimani</h5>
+                                    <p class="mb-4">Our custom approach to creating a personal experience helps us to assist, consult and advice athletes as Individuals.</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-  
+                   <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/DSC_0593.JPG" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">Hermosa Karen</h5>
+                                    <p class="mb-4">Get insights about your players’ performance and team management Processes with real-time analytics.</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
- <div class="d-flex align-items-center">
-  <a href="index.html" class="navbar-brand p-0">
-    <img class="logo img-fluid" src="img/buzzkidlogo.png" alt="Logo" style="height: 200px;">
-  </a>
-</div>
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/DSC_0538.JPG" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">Spa Mall Thika Rd</h5>
+                                    <p class="mb-4">Our construction division creates Model alignment of sports facilities, according to your vision to Maximize the impact on your Business.</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-<div class="container-fluid position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="fa fa-bars"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ms-auto py-0">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link active" style="font-family: 'Ubuntu', sans-serif;">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="services.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Our Services</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">Bookings</a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html" class="nav-link" style="font-family: 'Ubuntu', sans-serif;">About</a>
-                </li>
-            </ul>
-            <a href="/docs/" target="_blank" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Download Form</a>
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="service-item rounded">
+                           <div class="service-img rounded-top">
+                                <img src="img/IMG_20231213_224603.jpg" class="img-fluid rounded-top w-100" alt="">
+                           </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4" style="font-family: 'Ubuntu', sans-serif;">Steadmark Thika Rd</h5>
+                                    <p class="mb-4">unique activation Opportunities that engage with target Audiences, putting our clients at the heart Of the event.</p>
+                                    <div class="contact-info">
+                                        <p><span class="label">Phone 1:</span> <a href="tel:+254725320998">+254 725 320 998</a></p>
+                                        <p><span class="label">Phone 2:</span> <a href="tel:+254113709867">+254 113 709 867</a></p>
+                                        <p><span class="label">Email:</span> <a href="mailto:info@buzzkidgroup.com">info@buzzkidgroup.com</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p></p>
+                    <br>
+                    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="/docs/">Download Booking Form</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-</div>
-<div>
-    <h1>Book Here</h1>
-</div>
-<h1>Book Here</h1>
+        <!-- Services End -->
+
 <!-- Footer Start -->
 <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
     <div class="container py-5">
