--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   width: 100%;
 }
 </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6053381914281982"
+     crossorigin="anonymous"></script>
     </head>
 	<!-- Favicon -->
         <link rel="icon" href="img/favicon (2).ico">
