--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta content="swimming lessons, sports training, athlete management, Nairobi Kenya" name="keywords">
     <meta content="Buzzkid Group Limited offers professional swimming lessons, sports training, and athlete management services in Nairobi, Kenya" name="description">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6053381914281982"
+     crossorigin="anonymous"></script>
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -743,7 +746,7 @@
                     <div class="d-flex flex-wrap">
                         <a href="#" class="me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Nairobi, Kenya</a>
                         <a href="tel:+254725320998" class="me-4"><i class="fas fa-phone text-primary me-2"></i>+254 725 320 998</a>
-                        <a href="mailto:info@buzzkidgroup.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidgroup.com</a>
+                        <a href="mailto:info@buzzkidsport.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidsport.com</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-md-end">
@@ -788,43 +791,48 @@
     </div>
 </nav>
 <!-- Navbar End -->
-
-    <!-- Hero Section Start -->
-    <div class="hero-section">
-        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/DSC_0335.JPG" class="d-block w-100" alt="Swimming Training">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/DSC_0342.JPG" class="d-block w-100" alt="Athlete Management">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/DSC_0346.JPG" class="d-block w-100" alt="Creating Champions">
-                </div>
+<!-- Hero Section Start -->
+<div class="hero-section">
+    <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/DSC_0335.JPG" class="d-block w-100" alt="Swimming Training">
+                <!-- Enhanced overlay for better text visibility -->
+                <div class="image-overlay"></div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-item">
+                <img src="img/DSC_0342.JPG" class="d-block w-100" alt="Athlete Management">
+                <div class="image-overlay"></div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/DSC_0346.JPG" class="d-block w-100" alt="Creating Champions">
+                <div class="image-overlay"></div>
+            </div>
         </div>
-        
-        <div class="hero-content">
-            <div class="container">
-                <h1 class="display-3 mb-4">Leading Swim Company in Nairobi Kenya</h1>
-                <p class="lead mb-5">Buzzkid has made significant strides in promoting sustainable life survival skills, with a particular focus on swimming. Our programs cater to individuals of all ages and abilities, offering a unique blend of physical activity and holistic wellness.</p>
-                <div class="d-flex flex-wrap justify-content-center gap-3">
-                    <a href="booking.html" class="btn btn-primary btn-lg">Book Now</a>
-                    <a href="about.html" class="btn btn-outline-light btn-lg">Learn More</a>
+        <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    
+    <div class="hero-content">
+        <div class="container">
+            <div class="hero-text-wrapper">
+                <h1 class="hero-title">Leading Swim Company in Nairobi Kenya</h1>
+                <p class="hero-subtitle">Buzzkid has made significant strides in promoting sustainable life survival skills, with a particular focus on swimming. Our programs cater to individuals of all ages and abilities, offering a unique blend of physical activity and holistic wellness.</p>
+                <div class="hero-buttons">
+                    <a href="booking.html" class="btn btn-primary btn-lg hero-btn">Book Now</a>
+                    <a href="about.html" class="btn btn-outline-light btn-lg hero-btn">Learn More</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Hero Section End -->
+</div>
+<!-- Hero Section End -->
 
     <!-- About Section Start -->
     <section class="py-5">
@@ -1434,7 +1442,7 @@
             <div class="col-lg-3 col-md-6">
                 <h5>Contact Info</h5>
                 <p><i class="fas fa-map-marker-alt me-2"></i> Lantana Rd, Nairobi</p>
-                <p><i class="fas fa-envelope me-2"></i> info@buzzkidgroup.com</p>
+                <p><i class="fas fa-envelope me-2"></i>info@buzzkidsport.com</p>
                 <p><i class="fas fa-phone me-2"></i> +254 725 320 998</p>
             </div>
             <div class="col-lg-3 col-md-6">
