--- a/booking.html
+++ b/booking.html
@@ -8,6 +8,9 @@
     <meta content="swimming lessons booking, pool locations Nairobi, kids swimming classes, adult swimming lessons" name="keywords">
     <meta content="Book your swimming lessons with Buzzkid Group at multiple pool locations across Nairobi. Professional coaching for kids and adults." name="description">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6053381914281982"
+     crossorigin="anonymous"></script>
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -576,7 +579,7 @@
                     <div class="d-flex flex-wrap">
                         <a href="#" class="me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Nairobi, Kenya</a>
                         <a href="tel:+254725320998" class="me-4"><i class="fas fa-phone text-primary me-2"></i>+254 725 320 998</a>
-                        <a href="mailto:info@buzzkidgroup.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidgroup.com</a>
+                        <a href="mailto:info@buzzkidsport.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidsport.com</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-md-end">
@@ -793,7 +796,7 @@
                                 <div class="contact-item">
                                     <i class="fas fa-envelope fa-2x mb-3"></i>
                                     <h5>Email</h5>
-                                    <a href="mailto:info@buzzkidgroup.com" class="text-white fs-5 d-block">info@buzzkidgroup.com</a>
+                                    <a href="mailto:info@buzzkidsport.com" class="text-white fs-5 d-block">info@buzzkidsport.com</a>
                                 </div>
                             </div>
                         </div>
@@ -1101,7 +1104,7 @@
             <div class="d-flex flex-wrap justify-content-center gap-3">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKbMowXoWyY3ZpzBnjaul2OtKXXaWnUpOQsqB4pIUAX4YKWg/viewform?usp=sharing&ouid=101118391261112064963" target="_blank" class="btn btn-light btn-lg">Register Now</a>
                 <a href="tel:+254725320998" class="btn btn-outline-light btn-lg">Call Us</a>
-                <a href="mailto:info@buzzkidgroup.com" class="btn btn-outline-light btn-lg">Email Us</a>
+                <a href="mailto:info@buzzkidsport.com" class="btn btn-outline-light btn-lg">Email Us</a>
             </div>
         </div>
     </section>
@@ -1131,7 +1134,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h5>Contact Info</h5>
                     <p><i class="fas fa-map-marker-alt me-2"></i> Lantana Rd, Nairobi</p>
-                    <p><i class="fas fa-envelope me-2"></i> info@buzzkidgroup.com</p>
+                    <p><i class="fas fa-envelope me-2"></i> info@buzzkidsport.com</p>
                     <p><i class="fas fa-phone me-2"></i> +254 725 320 998</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
