--- a/services.html
+++ b/services.html
@@ -8,6 +8,9 @@
     <meta content="swimming lessons, sports training, athlete management, data analytics, business development" name="keywords">
     <meta content="Discover Buzzkid Group's comprehensive sports services including swimming lessons, athlete management, sports analytics, and business development in Nairobi" name="description">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6053381914281982"
+     crossorigin="anonymous"></script>
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -495,7 +498,7 @@
                     <div class="d-flex flex-wrap">
                         <a href="#" class="me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Nairobi, Kenya</a>
                         <a href="tel:+254725320998" class="me-4"><i class="fas fa-phone text-primary me-2"></i>+254 725 320 998</a>
-                        <a href="mailto:info@buzzkidgroup.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidgroup.com</a>
+                        <a href="mailto:info@buzzkidsport.com"><i class="fas fa-envelope text-primary me-2"></i>info@buzzkidsport.com</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-md-end">
@@ -903,7 +906,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h5>Contact Info</h5>
                     <p><i class="fas fa-map-marker-alt me-2"></i> Lantana Rd, Nairobi</p>
-                    <p><i class="fas fa-envelope me-2"></i> info@buzzkidgroup.com</p>
+                    <p><i class="fas fa-envelope me-2"></i>info@buzzkidsport.com</p>
                     <p><i class="fas fa-phone me-2"></i> +254 725 320 998</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
