add seo key words

--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BUZZKID GROUP LIMITED - Premier Swimming & Sports Services</title>
+    <title>Swimming Lessons in Nairobi | Kids, Adults & Schools | Buzzkid Group Ltd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="swimming lessons, sports training, athlete management, Nairobi Kenya" name="keywords">
     <meta content="Buzzkid Group Limited offers professional swimming lessons, sports training, and athlete management services in Nairobi, Kenya" name="description">
+    <!-- Primary SEO Meta Tags -->
+    <meta name="description" content="Professional swimming lessons in Nairobi for kids, adults, and schools. Buzzkid Swimming Academy offers certified coaches, safe pools, flexible schedules, and a training center in Syokimau.">
+    <meta name="keywords" content="swimming lessons Nairobi, kids swimming classes Nairobi, adult swimming lessons Nairobi, swimming schools in Nairobi, Syokimau swimming lessons, school swimming programs Nairobi">
+
+    <!-- Open Graph for Social Media -->
+    <meta property="og:title" content="Swimming Lessons in Nairobi | Buzzkid Swimming Academy">
+    <meta property="og:description" content="Kids, adults & school swimming lessons in Nairobi. Professional coaches, safe pools and a training center in Syokimau.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://buzzkid.com">
+    <meta property="og:image" content="https://buzzkid.com/img/buzzkidlogo-1.jpg">
+
+    <!-- LocalBusiness Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsActivityLocation",
+      "name": "Buzzkid Swim School",
+      "url": "https://buzzkid.com",
+      "description": "Swimming lessons in Nairobi for kids, adults and schools. Located in Syokimau with partner pools across Nairobi.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Nairobi",
+        "addressRegion": "Nairobi County",
+        "streetAddress": "Syokimau",
+        "addressCountry": "Kenya"
+      },
+      "telephone": "+254725320998"
+    }
+    </script>
+
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6053381914281982"
      crossorigin="anonymous"></script>
@@ -796,23 +826,24 @@
     <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/DSC_0335.JPG" class="d-block w-100" alt="Swimming Training">
-                <!-- Enhanced overlay for better text visibility -->
+                <img src="img/DSC_0335.JPG" class="d-block w-100" alt="Swimming Lessons in Nairobi">
                 <div class="image-overlay"></div>
             </div>
             <div class="carousel-item">
-                <img src="img/DSC_0342.JPG" class="d-block w-100" alt="Athlete Management">
+                <img src="img/DSC_0342.JPG" class="d-block w-100" alt="Kids Swimming Classes Nairobi">
                 <div class="image-overlay"></div>
             </div>
             <div class="carousel-item">
-                <img src="img/DSC_0346.JPG" class="d-block w-100" alt="Creating Champions">
+                <img src="img/DSC_0346.JPG" class="d-block w-100" alt="Adult Swimming Lessons Nairobi">
                 <div class="image-overlay"></div>
             </div>
         </div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
+
         <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
@@ -822,10 +853,18 @@
     <div class="hero-content">
         <div class="container">
             <div class="hero-text-wrapper">
-                <h1 class="hero-title">Leading Swim Company in Nairobi Kenya</h1>
-                <p class="hero-subtitle">Buzzkid has made significant strides in promoting sustainable life survival skills, with a particular focus on swimming. Our programs cater to individuals of all ages and abilities, offering a unique blend of physical activity and holistic wellness.</p>
+                
+                <!-- Updated Title & Subtitle -->
+                <h1 class="hero-title">Top Swimming Lessons in Nairobi for Kids, Adults & Schools</h1>
+                
+                <p class="hero-subtitle">
+                    Buzzkid Swim School offers professional swimming training across Nairobi —
+                    including our main pool in Syokimau and partner pools across Nairobi.  
+                    We provide safe, structured programs for beginners, intermediate and advanced swimmers.
+                </p>
+
                 <div class="hero-buttons">
-                    <a href="booking.html" class="btn btn-primary btn-lg hero-btn">Book Now</a>
+                    <a href="booking.html" class="btn btn-primary btn-lg hero-btn">BOOK NOW</a>
                     <a href="about.html" class="btn btn-outline-light btn-lg hero-btn">Learn More</a>
                 </div>
             </div>
@@ -833,6 +872,7 @@
     </div>
 </div>
 <!-- Hero Section End -->
+
 
     <!-- About Section Start -->
     <section class="py-5">
